<resources>
    <string name="facebook_app_id">1051478504985433</string>
    <string name="fb_login_protocol_scheme">fb1051478504985433</string>
    <string name="application_name">REVOLUTION BUY</string>
    <string name="mixpanel_token">6916d23001e163176d4f0840dc0a9269</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="nav_item_add_funds">Add Funds to Wallet</string>
    <string name="nav_item_withdraw">Withdraw My Earnings</string>
    <string name="nav_item_history">History Transaction</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_change_password">Change Password</string>
    <string name="nav_item_terms_condi">Terms &amp; Conditions</string>
    <string name="nav_item_privacys">Privacy Policy</string>
    <string name="nav_item_notification">Notification</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_notify_prop_message">Notify me every time a prop picked by me wins</string>
    <string name="nav_item_notify_match">Notify me 15 minutes before contest starts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_skip">Skip</string>
    <string name="text_next">Next</string>
    <string name="font_avenir_medium">fonts/AvenirNext-Medium.ttf</string>
    <string name="font_avenir_regular">fonts/avenir-next-regular.ttf</string>
    <string name="font_avenir_bold">fonts/avenir-next-bold.ttf</string>
    <string name="font_avenir_demibold">fonts/AvenirNext-DemiBold.ttf</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="or">OR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_event">SignUp Event</string>
    <string name="register">REGISTER</string>
    <string name="to_be_linked">Easiest way to\nbe linked</string>
    <string name="ranking">Ranking</string>
    <string name="rank">Rank</string>
    <string name="guaranteed_prize">Guaranteed Prize</string>
    <string name="first_position">1st Position:</string>
    <string name="last_win_position">Last Win Position:</string>
    <string name="m">M</string>
    <string name="entries">Entries:</string>
    <string name="text_sec">SEC</string>
    <string name="text_hr">HR</string>
    <string name="text_min">MIN</string>
    <string name="traditional">TRADITIONAL</string>
    <string name="versus">VERSUS</string>
    <string name="all">ALL</string>
    <string name="NBA">NBA</string>
    <string name="MLB">MLB</string>
    <string name="NFL">NFL</string>
    <string name="contest_details">Contest Details</string>
    <string name="wallet_card_balance">Wallet Card &amp; Balance</string>
    <string name="sports">Sport</string>
    <string name="upcoming">Upcoming</string>
    <string name="live">Live</string>
    <string name="history">History</string>
    <string name="text_tnc"><![CDATA[Terms & Conditions]]></string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="unable_to_fetch_n_from_facebook">Unable to fetch\nfrom Facebook</string>
    <string name="enter_username_to_sign_up">Enter username to Sign Up using\nFacebook</string>
    <string name="username">Username</string>
    <string name="email_id">Email ID</string>
    <string name="email_id_small">email ID</string>
    <string name="view_onboarding">View Onboarding</string>
    <string name="how_to_play">How To Play</string>
    <string name="text_accept_terms_conditions"><![CDATA[By signing up, I agree to the\nPrivacy Policy & the Terms and Conditions.]]></string>
    <string name="text_please_enter">Please enter %s</string>
    <string name="text_please_select">Please select a %s</string>
    <string name="text_please_enter_valid">Please enter valid %s</string>
    <string name="agree_to_tnc"><![CDATA[Please agree to Thrive Fantasy\'s Terms & Conditions and Privacy Policy]]></string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="title_activity_tab_dummy">TabDummy</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="get_started">Get Started</string>
    <string name="no_internet">Please check your network connection.</string>
    <string name="server_error">There was an error. Please try again later.</string>
    <string name="no_contest">No Contest found.\n Please try after some time</string>
    <string name="no_available_contest">No contest is available to apply.\n Please try after some time</string>
    <string name="url_privacy">admin/privacy</string>
    <string name="url_terms">admin/terms</string>
    <string name="no_props">No Props found.\n Please try after some time</string>
    <string name="coming_soon">Coming Soon..</string>
    <string-array name="buy_tabs">
        <item>Wishlist</item>
        <item>Purchased</item>
    </string-array>
    <string-array name="your_offer_tabs">
        <item>Current</item>
        <item>Sold</item>
    </string-array>
    <string-array name="walkthrough_labels">
        <item>Everything is in reverse</item>
        <item>Less time searching</item>
        <item>Want to sell an item?</item>
        <item>No listing fees</item>
    </string-array>
    <string-array name="walkthrough_descs">
        <item>Buyers place items and sellers make the offers.</item>
        <item>Post items you want to buy then sit back and wait for sellers to respond.</item>
        <item>View a list of interested buyers then make an offer.</item>
        <item>Items can be placed for free with no time limit.</item>
    </string-array>
    <string-array name="categories_labels">
        <item>Antiques</item>
        <item>Automotive</item>
        <item>Baby</item>
        <item>Clothing &amp; Accessories</item>
        <item>Collectibles</item>
        <item>Electronics</item>
        <item>Health &amp; Beauty</item>
        <item>Home &amp; Garden</item>
        <item>Jewellery &amp; Watches</item>
        <item>Musical Instruments &amp; Equipment</item>
        <item>Shoes</item>
        <item>Sporting Goods</item>
        <item>Tools &amp; Trades</item>
        <item>Toys</item>
        <item>Video Games &amp; Accessories</item>
        <item>Everything Else</item>
    </string-array>
    <string name="done">Done</string>
    <string name="login">Login</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="over_18_label">Are you over 18? This is legally required to use the app.</string>
    <string name="login_with_email">Login with email</string>
    <string name="request_recieved">Request received</string>
    <string name="item_listed">Item Listed</string>
    <string name="we_ll_notify_you_if_a_seller_is_interested">We’ll notify you if a seller is interested.</string>
    <string name="offer_has_been_sent">Your offer has been sent! Sit back and the buyer will get back to you soon.</string>
    <string name="offer_sent">Offer Sent</string>
    <string name="view_items_you_re_selling">View items you\'re selling</string>
    <string name="back_to_categories">Back to categories</string>
    <string name="you_have_successfully_purchased_the_item">You have successfully purchased the item!</string>
    <string name="rate_revolution_buy">Rate Revolution Buy</string>
    <string name="maybe_later">Maybe later</string>
</resources>