<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_bg">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:padding="@dimen/margin_16"
            android:src="@drawable/ic_back_blue" />

        <View
            android:id="@+id/anchor_center"
            android:layout_width="@dimen/margin_1"
            android:layout_height="@dimen/margin_1"
            android:layout_centerInParent="true"/>

        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/anchor_center"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:background="@drawable/ic_button_blue"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/font_avenir_medium" />

        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_yes"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/ic_button_blue_border"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/no"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/font_avenir_medium" />

        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/anchor_center"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_24"
            android:gravity="center"
            android:text="@string/over_18_label"
            android:textColor="@color/color_label"
            android:textSize="@dimen/textsize_17"
            app:customFont="@string/font_avenir_regular" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/text_label"
            android:src="@drawable/ic_age"
            android:layout_marginBottom="@dimen/margin_24"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bottom_images" />

    </RelativeLayout>
</layout>