<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_bg">

        <View
            android:id="@+id/view_anchor"
            android:layout_width="@dimen/margin_1"
            android:layout_height="@dimen/margin_1"
            android:layout_centerInParent="true" />

        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_above="@id/view_anchor"
            android:background="@drawable/ic_button_blue"
            android:gravity="center"
            android:padding="@dimen/margin_16"
            android:text="@string/login_with_email"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/font_avenir_medium" />


        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_login"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_8"
            android:text="We’ve emailed you a reset link. Please check your inbox or junk mail to ensure you’ve received it."
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/textsize_15"
            app:customFont="@string/font_avenir_regular" />

        <com.revauc.revolutionbuy.widget.typeface.CustomTextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/text_label"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_16"
            android:text="@string/request_recieved"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/textsize_24"
            app:customFont="@string/font_avenir_medium" />


    </RelativeLayout>
</layout>